fix TODO messages in project add test Carton